--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,7 +14,7 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:menu="@menu/menu"
-        android:background="#FF5722"
+        android:background="#3F51B5"
         app:itemIconTint="#FFFFFF"
         app:itemTextColor="#FFFFFF"/>
 
